Use z-index to ensure that left section is interactive
The mapbox canvas widget occupies the entire screen, and "covers" the
left section, causing it to be non-interactive. Setting a z-index for
each element (and updating the left section's positioning to be
absolute) fixes the problem. [#130792677]

--- a/app/stylesheets/mapbox-gl.css
+++ b/app/stylesheets/mapbox-gl.css
@@ -18,6 +18,10 @@
     cursor: grabbing;
 }
 
+.mapboxgl-canvas {
+    outline: none;
+}
+
 .mapboxgl-ctrl-top-left,
 .mapboxgl-ctrl-top-right,
 .mapboxgl-ctrl-bottom-left,
